<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="@dimen/paddingdetail"
    tools:context=".MovieDetailActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:gravity="top">

        <ScrollView
            android:id="@+id/cadastro_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/paddingTopDetail">

                <ImageView
                    android:id="@+id/ivDetailImg"
                    android:layout_width="@dimen/layoutwidthdetailimg"
                    android:layout_height="@dimen/layoutheightdetailimg"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/layoutmargimBottomDetail"
                    android:contentDescription="@string/lbl_img"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="@dimen/layoutwidtdetailhname"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layoutmarginbottom"
                    android:text="@string/lbl_title"
                    android:textColor="@drawable/colortextviewlist"
                    android:textSize="@dimen/textsizedetail" />

                <TextView
                    android:id="@+id/tvOverView"
                    android:layout_width="@dimen/layoutwidthoverwiew"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layoutmarginbottom"
                    android:text="@string/lbl_overview"
                    android:textColor="@drawable/colortextviewlist"
                    android:textSize="@dimen/textsizedetail" />

                <TextView
                    android:id="@+id/tvGenre"
                    android:layout_width="@dimen/layoutwidthdetailgenre"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layoutmarginbottom"
                    android:text="@string/lbl_genre"
                    android:textColor="@drawable/colortextviewlist"
                    android:textSize="@dimen/textsizedetail" />

                <TextView
                    android:id="@+id/tvReleaseDate"
                    android:layout_width="@dimen/layoutwidthreleasedate"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layoutmarginbottom"
                    android:text="@string/lbl_releasedate"
                    android:textColor="@drawable/colortextviewlist"
                    android:textSize="@dimen/textsizedetail" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>